improve historical record management
